Install conda into global docker image

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -31,6 +31,7 @@ RUN easy_install3 pip
 RUN easy_install-2.7 pip
 RUN pip3 install -U virtualenv
 RUN pip2 install -U virtualenv
+RUN pip2 install -U conda
 
 # UID and GID from readthedocs/user
 RUN groupadd --gid 205 docs
