--- a/advanced/Dockerfile
+++ b/advanced/Dockerfile
@@ -8,8 +8,8 @@ MAINTAINER Read the Docs <support@readthedocs.com>
 
 # .NET support - Mono, DNVM, and docfx installation
 ENV USER_HOME /home/docs
-ENV DNX_VERSION 1.0.0-beta6
-ENV DOCFX_VERSION 1.0.0
+ENV DNX_VERSION 1.0.0-rc1-update1
+ENV DOCFX_VERSION 1.3.0
 
 USER root
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 \
