--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -32,7 +32,7 @@ RUN easy_install-2.7 pip
 RUN pip3 install -U virtualenv auxlib
 RUN pip2 install -U virtualenv auxlib
 RUN curl -O https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh
-RUN bash Miniconda2-latest-Linux-x86_64.sh
+RUN bash Miniconda2-latest-Linux-x86_64.sh -b -p /usr/local/
 
 # UID and GID from readthedocs/user
 RUN groupadd --gid 205 docs
