--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -33,6 +33,7 @@ RUN pip3 install -U virtualenv auxlib
 RUN pip2 install -U virtualenv auxlib
 RUN curl -O https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh
 RUN bash Miniconda2-latest-Linux-x86_64.sh -b -p /usr/local/miniconda/
+RUN ln -s /usr/local/miniconda/bin/conda /usr/local/bin/conda
 
 # UID and GID from readthedocs/user
 RUN groupadd --gid 205 docs
