Set default locale to C.UTF-8
This should fix issues like https://github.com/rtfd/readthedocs.org/issues/2225 and https://github.com/rtfd/readthedocs.org/issues/2101

--- a/16.04/Dockerfile
+++ b/16.04/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Read the Docs <support@readthedocs.com>
 
 ENV DEBIAN_FRONTEND noninteractive
 ENV APPDIR /app
+ENV LANG C.UTF-8
 
 # System dependencies
 RUN apt-get -y update
