Rename paths to reflect pattern used in building docker images
Because we have a 14.04 and 16.04 build image, drop the base/advanced
nomenclature for something more descriptive by default.

--- a/14.04-advanced/Dockerfile
+++ b/14.04-advanced/Dockerfile
@@ -3,7 +3,7 @@
 # This image is for resource-intensive toolchains and and build tools with
 # special requirements
 
-FROM rtfd-build:base
+FROM readthedocs/build:14.04
 MAINTAINER Read the Docs <support@readthedocs.com>
 
 # .NET support - Mono, DNVM, and docfx installation
