--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
     - PIPENV_VENV_IN_PROJECT=1
     - PIPENV_IGNORE_VIRTUALENVS=1
 before_install:
-  - pip install pipenv
+  - pip install git+https://github.com/pypa/pipenv.git@master
 install:
   - pipenv install
 matrix:
