Build docker image in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,6 @@ before_install:
   - pip install pipenv
 install:
   - pipenv install
-script: pipenv run pytest
+script:
+  - pipenv run pytest
+  - docker build .
