Run some version tests after building the image
After the image is built from the current commit, we spin up the container with
the image just built and execute some commands to check the versions them.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,11 @@ before_install:
 install:
   - pipenv install
 script:
-  - pipenv run pytest
-  - docker build .
+  - docker build -t readthedocs/build:master .
+  - pipenv run pytest -m master
+
 
 branches:
   only:
     - master
+    - releases/6.x
