--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ before_install:
 install:
   - pipenv install
 script:
-  - pipenv run pytest --suppress-no-test-exit-code
-  - docker build .
+  - docker build -t readthedocs/build:master .
+  - pipenv run pytest -m master
 
 branches:
   only:
     - master
+    - releases/6.x
