--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
     - PIPENV_IGNORE_VIRTUALENVS=1
 before_install:
   - pip install pipenv
+  - docker pull readthedocs/build:master || true
 install:
   - pipenv install
 script:
