--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ env:
     - PIPENV_IGNORE_VIRTUALENVS=1
 before_install:
   - pip install pipenv
-  - docker pull readthedocs/build:master || true
+  - docker pull readthedocs/build:6.0 || true
 install:
   - pipenv install
 script:
-  - docker build --cache-from readthedocs/build:master -t readthedocs/build:master .
-  - pipenv run pytest -m image_master
+  - docker build --cache-from readthedocs/build:6.0 -t readthedocs/build:6.0 .
+  - pipenv run pytest -m image_60
 
 branches:
   only:
