Do not use Docker image cache
We can't use `--cache-from` because the `apt-get update` command is used from
cache and that could make the package versions/URLs to be outdated and fail.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,10 @@ env:
     - PIPENV_IGNORE_VIRTUALENVS=1
 before_install:
   - pip install pipenv
-  - docker pull readthedocs/build:7.0 || true
 install:
   - pipenv install
 script:
-  - docker build --cache-from readthedocs/build:7.0 -t readthedocs/build:7.0 .
+  - docker build -t readthedocs/build:7.0 .
   - pipenv run pytest -m image_70
 
 
