--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,10 @@
-version: 2
+version: 2.1
+
+orbs:
+  aws-s3: circleci/aws-s3@3.0.0
 
 jobs:
-  compile-upload-tools:
+  compile-upload-tool:
     parameters:
       os:
         type: string
@@ -11,12 +14,7 @@ jobs:
     docker:
       - image: cimg/python:3.10
       - environment:
-          OS=<< parameters.os >>
-          # TODO: how do we set this for .org and/or .com?
-          AWS_REGION=
-          AWS_ACCESS_KEY_ID=
-          AWS_SECRET_ACCESS_KEY=
-          AWS_BUILD_TOOLS_BUCKET=
+          OS: << parameters.os >>
 
     steps:
       - checkout
@@ -24,24 +22,23 @@ jobs:
           version: 20.10.11
           docker_layer_caching: true
       - run:
-          name: Install depedencies
+          name: Download compile_version_upload_s3.sh script
           command: |
-            pip install awscli==1.20.34
+            wget https://raw.githubusercontent.com/readthedocs/readthedocs.org/humitos/build-tool-no-upload-production/scripts/compile_version_upload_s3.sh
       - run:
           name: Download Docker image
           command: |
             docker pull readthedocs/build:<< parameters.os >>
       - run:
-          name: Download compile_version_upload_s3.sh script
-          command: |
-            wget https://raw.githubusercontent.com/readthedocs/readthedocs.org/rel/scripts/compile_version_upload_s3.sh
-      - run:
           name: Compile tool version
           command: |
-            # TODO: How do we iterate over `parameterts.tool` properly here?
-            # TODO: How do we run only the command we want, avoiding compiling all the tools/versions each time?
-            ./compile_version_upload_s3.sh << parameters.tool >> << parameters.tool.version >>
-
+            ./compile_version_updload_s3.sh << parameters.tool >>
+      - aws-s3/copy:
+          aws-region: $AWS_REGION
+          aws-access-key-id: $AWS_ACCESS_KEY_ID
+          aws-secret-access-key: $AWS_SECRET_ACCESS_KEY
+          from: << parameters.os >>-<< parameters.tool >>.tar.gz
+          to: s3://${AWS_BUCKET_NAME}
 
   tests:
     docker:
@@ -74,27 +71,36 @@ workflows:
 
   compile:
     jobs:
-      - compile-upload-tools:
+      - compile-upload-tool:
+          name: compile-<< matrix.os >>-<< matrix.tool >>
+          filters:
+            branches:
+              # only: /main/
+              only: /humitos/automate-compile-upload-s3/
+          environment:
+            AWS_REGION: $ORG_AWS_SECRET_ACCESS_KEY
+            AWS_BUCKET_NAME: $ORG_BUCKET_NAME
+            AWS_ACCESS_KEY_ID: $ORG_AWS_SECRET_ACCESS_KEY
+            AWS_SECRET_ACCESS_KEY: $ORG_AWS_SECRET_ACCESS_KEY
+
           matrix:
             parameters:
               os:
                 - ubuntu-20.04
                 - ubuntu-22.04
               tool:
-                python:
-                  - 2.7.18
-                  - 3.6.15
-                  - 3.7.12
-                  - 3.8.12
-                  - 3.9.7
-                  - 3.10.0
-                  - pypy3.7-7.3.5
-                  - miniconda3-4.7.12
-                  - mambaforge-4.10.3-10
-                nodejs:
-                  - 14.17.6
-                  - 16.9.1
-                rust:
-                  - 1.55.0
-                golang:
-                  - 1.17.1
+                - "python 2.7.18"
+                - "python 3.6.15"
+                - "python 2.7.18"
+                - "python 3.6.15"
+                - "python 3.7.12"
+                - "python 3.8.12"
+                - "python 3.9.7"
+                - "python 3.10.0"
+                - "python pypy3.7-7.3.5"
+                - "python miniconda3-4.7.12"
+                - "python mambaforge-4.10.3-10"
+                - "nodejs 14.17.6"
+                - "nodejs 16.9.1"
+                - "rust 1.55.0"
+                - "golang 1.17.1"
