--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     parameters:
       os:
         type: string
-      tool:
+      tools:
         type: string
 
     docker:
@@ -26,37 +26,36 @@ jobs:
             wget https://raw.githubusercontent.com/readthedocs/readthedocs.org/humitos/build-tool-no-upload-production/scripts/compile_version_upload_s3.sh
       - run:
           name: Download Docker image
-          # NOTE: update the DOCKER_IMAGE when we release a new dated Ubuntu image
           command: |
-            if [[ "<< parameters.os >>" == "ubuntu-22.04" ]]
-            then
-                export DOCKER_IMAGE=ubuntu-22.04-2022.03.15
-            fi
-
-            if [[ "<< parameters.os >>" == "ubuntu-20.04" ]]
-            then
-                export DOCKER_IMAGE=ubuntu-20.04-2022.02.16
-            fi
-
-            docker pull readthedocs/build:$DOCKER_IMAGE
-            docker tag readthedocs/build:$DOCKER_IMAGE readthedocs/build:<< parameters.os >>
+            for DOCKER_IMAGE in "<< parameters.os >>"
+            do
+              docker pull readthedocs/build:$DOCKER_IMAGE
+              DOCKER_TAG=$(echo << parameters.os >> | cut -d- -f1,2)
+              docker tag readthedocs/build:$DOCKER_IMAGE readthedocs/build:$DOCKER_TAG
+            done
       - run:
           name: Compile tool version
-          environment:
-            OS: << parameters.os >>
           command: |
-            /bin/bash compile_version_upload_s3.sh << parameters.tool >>
-      - aws-s3/copy:
+            export OS=$(echo << parameters.os >> | cut -d- -f1,2)
+
+            for TOOL_VERSION in "<< parameters.tools >>"
+            do
+              export TOOL=$(echo $TOOL_VERSION | cut -d- -f1)
+              export VERSION=$(echo $TOOL_VERSION | cut -d- -f2)
+
+              /bin/bash compile_version_upload_s3.sh $TOOL $VERSION
+            done
+      - aws-s3/sync:
           aws-region: ORG_AWS_REGION
           aws-access-key-id: ORG_AWS_ACCESS_KEY_ID
           aws-secret-access-key: ORG_AWS_SECRET_ACCESS_KEY
-          from: << parameters.os >>-<< parameters.tool >>.tar.gz
+          from: ./
           to: s3://${ORG_AWS_BUCKET_NAME}
-      - aws-s3/copy:
+      - aws-s3/sync:
           aws-region: COM_AWS_REGION
           aws-access-key-id: COM_AWS_ACCESS_KEY_ID
           aws-secret-access-key: COM_AWS_SECRET_ACCESS_KEY
-          from: << parameters.os >>-<< parameters.tool >>.tar.gz
+          from: ./
           to: s3://${COM_AWS_BUCKET_NAME}
 
   tests:
@@ -92,34 +91,17 @@ workflows:
   compile-and-upload-tool:
     jobs:
       - compile-and-upload-tool:
-          name: << matrix.os >>-<< matrix.tool >>
           filters:
             branches:
               # TODO: uncomment when ready to go to prod
               # only: /main/
               only: /humitos/automate-compile-upload-s3/
 
-          matrix:
-            parameters:
-              # These parameters come from `readthedocs.settings.base`'s
-              # RTD_DOCKER_BUILD_SETTINGS variable
-              # https://github.com/readthedocs/readthedocs.org/blob/ccdad233cda5bcd3ac3acd935536c9e8cfc2e440/readthedocs/settings/base.py#L536
-              os:
-                - ubuntu-22.04
-                - ubuntu-20.04
-              tool:
-                - python-2.7.18
-                - python-3.6.15
-                - python-2.7.18
-                - python-3.6.15
-                - python-3.7.12
-                - python-3.8.12
-                - python-3.9.7
-                - python-3.10.0
-                - python-pypy3.7-7.3.5
-                - python-miniconda3-4.7.12
-                - python-mambaforge-4.10.3-10
-                - nodejs-14.17.6
-                - nodejs-16.9.1
-                - rust-1.55.0
-                - golang-1.17.1
+          # These parameters come from `readthedocs.settings.base`'s
+          # RTD_DOCKER_BUILD_SETTINGS variable
+          # https://github.com/readthedocs/readthedocs.org/blob/ccdad233cda5bcd3ac3acd935536c9e8cfc2e440/readthedocs/settings/base.py#L536
+          #
+          # NOTE: update "parameters.os" when we release a new dated Ubuntu image
+          # NOTE: update "parameters.tools" when we add a new tool version
+          - os: "ubuntu-22.04-2022.03.15 ubuntu-20.04-2022.02.16"
+          - tools: "python-2.7.18 python-3.6.15 python-2.7.18 python-3.6.15 python-3.7.12 python-3.8.12 python-3.9.7 python-3.10.0 python-pypy3.7-7.3.5 python-miniconda3-4.7.12 python-mambaforge-4.10.3-10 nodejs-14.17.6 nodejs-16.9.1 rust-1.55.0 golang-1.17.1"
