Fix scope of variable used in compile script
`OS` variable was not exported, so was not in scope in the bash subprocess.
We noticed `22.04` used in both loops on `OS_NAMES`.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,14 +46,13 @@ jobs:
 
             for os in $OS_NAMES
             do
-              OS=$os
               for tool in $TOOL_NAMES
               do
                 TOOL=$tool
                 for version in ${TOOLS[$TOOL]}
                 do
                   VERSION=$version
-                  /bin/bash compile_version_upload_s3.sh $TOOL $VERSION
+                  OS=$os /bin/bash compile_version_upload_s3.sh $TOOL $VERSION
                 done
               done
             done
