Tune workflows to run outside `main`

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,7 +105,8 @@ workflows:
 
   compile-and-upload-tool:
     jobs:
-      - compile-and-upload-tool:
-          filters:
-            branches:
-              only: /main/
+      - compile-and-upload-tool
+#      - compile-and-upload-tool:
+#          filters:
+#            branches:
+#              only: /main/
