--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,8 +107,7 @@ workflows:
 
   compile-and-upload-tool:
     jobs:
-      - compile-and-upload-tool
-#      - compile-and-upload-tool:
-#          filters:
-#            branches:
-#              only: /main/
+      - compile-and-upload-tool:
+          filters:
+            branches:
+              only: /main/
