--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,10 +37,10 @@ jobs:
 
             OS_NAMES="ubuntu-22.04 ubuntu-20.04"
             TOOLS=(
-              ["python"]="2.7.18 3.6.15 3.7.13 3.8.13 3.9.13 3.10.4 3.11.0b3 pypy3.7-7.3.9 pypy3.8-7.3.9 pypy3.9-7.3.9 miniconda3-4.7.12 mambaforge-4.10.3-10"
-              ["nodejs"]="14.19.3 16.15.0 18.2.0"
-              ["rust"]="1.55.0 1.61.0"
-              ["golang"]="1.17.10 1.18.2"
+              ["python"]="2.7.18 3.6.15 3.7.15 3.8.15 3.9.15 3.10.8 3.11.0 pypy3.7-7.3.9 pypy3.8-7.3.9 pypy3.9-7.3.9 miniconda3-4.7.12 mambaforge-4.10.3-10"
+              ["nodejs"]="14.20.1 16.18.0 18.11.0 19.0.0"
+              ["rust"]="1.55.0 1.61.0 1.64.0"
+              ["golang"]="1.17.13 1.18.7 1.19.2"
             )
             TOOL_NAMES="python nodejs rust golang"
 
