--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
 
             OS_NAMES="ubuntu-22.04 ubuntu-20.04"
             TOOLS=(
-              ["python"]="2.7.18 3.6.15 3.7.17 3.8.17 3.9.17 3.10.12 3.11.4 pypy3.7-7.3.9 pypy3.8-7.3.11 pypy3.9-7.3.12 miniconda3-4.7.12 mambaforge-4.10.3-10"
+              ["python"]="2.7.18 3.6.15 3.7.17 3.8.17 3.9.17 3.10.12 3.11.4 pypy3.7-7.3.9 pypy3.8-7.3.11 pypy3.9-7.3.12 miniconda3-4.7.12 mambaforge-4.10.3-10 mambaforge-22.9"
               ["nodejs"]="14.20.1 16.18.1 18.16.1 19.0.1 20.3.1"
               ["rust"]="1.55.0 1.61.0 1.64.0 1.70.0"
               ["golang"]="1.17.13 1.18.10 1.19.10 1.20.5"
