Update pre-compiled `build.tools`
Required by https://github.com/readthedocs/readthedocs.org/pull/11074

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,9 +38,9 @@ jobs:
             OS_NAMES="ubuntu-22.04 ubuntu-20.04"
             TOOLS=(
               ["python"]="2.7.18 3.6.15 3.7.17 3.8.18 3.9.18 3.10.13 3.11.6 3.12.0 miniconda3-4.7.12 mambaforge-4.10.3-10 mambaforge-22.9.0-3"
-              ["nodejs"]="14.20.1 16.18.1 18.16.1 19.0.1 20.3.1"
-              ["rust"]="1.55.0 1.61.0 1.64.0 1.70.0"
-              ["golang"]="1.17.13 1.18.10 1.19.10 1.20.5"
+              ["nodejs"]="14.20.1 16.18.1 18.16.1 19.0.1 20.11.0"
+              ["rust"]="1.55.0 1.61.0 1.64.0 1.70.0 1.75.0"
+              ["golang"]="1.17.13 1.18.10 1.19.10 1.20.5 1.21.6"
             )
             TOOL_NAMES="python nodejs rust golang"
 
