--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
               ["rust"]="1.55.0 1.61.0 1.64.0 1.70.0 1.75.0"
               ["golang"]="1.17.13 1.18.10 1.19.10 1.20.5 1.21.6"
             )
-            TOOL_NAMES="python nodejs rust golang"
+            TOOL_NAMES="python nodejs ruby rust golang"
 
             for os in $OS_NAMES
             do
