CircleCI: update all `build.tools` and add new versions
We reached our 6 months policy, so we proceed to update all the versions.

Related:
* https://github.com/readthedocs/readthedocs.org/issues/11350

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,11 +37,11 @@ jobs:
 
             OS_NAMES="ubuntu-22.04 ubuntu-20.04"
             TOOLS=(
-              ["python"]="2.7.18 3.6.15 3.7.17 3.8.18 3.9.18 3.10.13 3.11.6 3.12.0 miniconda3-4.7.12 mambaforge-4.10.3-10 mambaforge-22.9.0-3"
-              ["nodejs"]="14.20.1 16.18.1 18.16.1 19.0.1 20.11.0"
-              ["ruby"]="3.3.0"
-              ["rust"]="1.55.0 1.61.0 1.64.0 1.70.0 1.75.0"
-              ["golang"]="1.17.13 1.18.10 1.19.10 1.20.5 1.21.6"
+              ["python"]="2.7.18 3.6.15 3.7.17 3.8.19 3.9.19 3.10.14 3.11.9 3.12.3 miniconda3-4.7.12 miniconda3-3.12-24.1.2-0 mambaforge-4.10.3-10 mambaforge-22.9.0-3 mambaforge-23.11.0-0"
+              ["nodejs"]="14.20.1 16.18.1 18.16.1 19.0.1 20.14.0"
+              ["ruby"]="3.3.2"
+              ["rust"]="1.55.0 1.61.0 1.64.0 1.70.0 1.75.0 1.78.0"
+              ["golang"]="1.17.13 1.18.10 1.19.13 1.20.14 1.21.11 1.22.4"
             )
             TOOL_NAMES="python nodejs ruby rust golang"
 
